// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeAlertModal price-data-unavailable does not open when activeQuotePriceData is present 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal quote-card should not render when there is no price impact warning or error: -0.1 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal quote-card should not render when there is no price impact warning or error: 0 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal quote-card should not render when there is no price impact warning or error: 0.001 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal quote-card should not render when there is no price impact warning or error: undefined 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal quote-card should render alert banner when there is a price impact error (no exchange rates): 0.27 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal bridge-alert-modal"
    data-testid="bridge-alert-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <div
                class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--align-items-center mm-box--width-full"
              >
                <svg
                  class="inline-block w-8 h-8 text-error-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
                  />
                </svg>
                <h4
                  class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default"
                >
                  Very high price impact
                </h4>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-pill"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box mm-container mm-container--max-width-undefined mm-box--padding-bottom-4 mm-box--padding-inline-4 mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
          >
            <p
              class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
            >
              You'll lose approximately 27% of your token's market price on this swap. Try a smaller trade or a more liquid route to improve your rate.
            </p>
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            />
          </div>
          <div
            class="mm-box mm-modal-footer mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
          >
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
            >
              <button
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default"
                data-testid="bridge-alert-modal-cancel-button"
                role="button"
              >
                <span
                  class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  Got it
                </span>
              </button>
            </div>
            <div
              class="mm-box mm-container mm-container--max-width-sm mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--align-items-center"
            />
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`BridgeAlertModal quote-card should render alert banner when there is a price impact error (no exchange rates): 0.27: BannerAlert within BridgeAlertModal 1`] = `undefined`;

exports[`BridgeAlertModal quote-card should render alert banner when there is a price impact error (with exchange rates): 0.27 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal bridge-alert-modal"
    data-testid="bridge-alert-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <div
                class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--align-items-center mm-box--width-full"
              >
                <svg
                  class="inline-block w-8 h-8 text-error-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
                  />
                </svg>
                <h4
                  class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default"
                >
                  Very high price impact
                </h4>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-pill"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box mm-container mm-container--max-width-undefined mm-box--padding-bottom-4 mm-box--padding-inline-4 mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
          >
            <p
              class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
            >
              You'll lose approximately 27% of your token's market price on this swap. Try a smaller trade or a more liquid route to improve your rate.
            </p>
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            />
            <div
              class="flex flex-row gap-4 items-center pt-3 pr-4 pb-3 pl-4 bg-error-muted rounded-xl"
              data-testid="bridge-alert-modal-banner"
            >
              <svg
                class="inline-block w-6 h-6 text-error-default"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
                />
              </svg>
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class=""
                >
                  <p
                    class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
                  >
                    You will lose $0.18 on this trade
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-modal-footer mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
          >
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
            >
              <button
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default"
                data-testid="bridge-alert-modal-cancel-button"
                role="button"
              >
                <span
                  class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  Got it
                </span>
              </button>
            </div>
            <div
              class="mm-box mm-container mm-container--max-width-sm mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--align-items-center"
            />
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`BridgeAlertModal quote-card should render alert banner when there is a price impact error (with exchange rates): 0.27: BannerAlert within BridgeAlertModal 1`] = `"You will lose $0.18 on this trade"`;

exports[`BridgeAlertModal quote-card should render warning banner (no exchange rates) when there is a price impact warning: 0.07 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal bridge-alert-modal"
    data-testid="bridge-alert-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <div
                class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--align-items-center mm-box--width-full"
              >
                <svg
                  class="inline-block w-8 h-8 text-warning-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m-.75-7.5V7.5a.75.75 0 0 1 1.5 0v5.25a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15a1.125 1.125 0 0 1 1.125 1.125"
                  />
                </svg>
                <h4
                  class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default"
                >
                  High price impact
                </h4>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-pill"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box mm-container mm-container--max-width-undefined mm-box--padding-bottom-4 mm-box--padding-inline-4 mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
          >
            <p
              class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
            >
              Because of your trade size and available liquidity, you'll get about 7.0% less than the market price. This is already factored into your quote.
            </p>
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            />
          </div>
          <div
            class="mm-box mm-modal-footer mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
          >
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
            >
              <button
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default"
                data-testid="bridge-alert-modal-cancel-button"
                role="button"
              >
                <span
                  class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  Got it
                </span>
              </button>
            </div>
            <div
              class="mm-box mm-container mm-container--max-width-sm mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--align-items-center"
            />
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`BridgeAlertModal quote-card should render warning banner (no exchange rates) when there is a price impact warning: 0.07: BannerAlert within BridgeAlertModal 1`] = `undefined`;

exports[`BridgeAlertModal quote-card should render warning banner when there is a price impact warning (with exchange rates): 0.07 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal bridge-alert-modal"
    data-testid="bridge-alert-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <div
                class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--align-items-center mm-box--width-full"
              >
                <svg
                  class="inline-block w-8 h-8 text-warning-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m-.75-7.5V7.5a.75.75 0 0 1 1.5 0v5.25a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15a1.125 1.125 0 0 1 1.125 1.125"
                  />
                </svg>
                <h4
                  class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default"
                >
                  High price impact
                </h4>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-pill"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box mm-container mm-container--max-width-undefined mm-box--padding-bottom-4 mm-box--padding-inline-4 mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
          >
            <p
              class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
            >
              Because of your trade size and available liquidity, you'll get about 7.0% less than the market price. This is already factored into your quote.
            </p>
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            />
          </div>
          <div
            class="mm-box mm-modal-footer mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
          >
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
            >
              <button
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default"
                data-testid="bridge-alert-modal-cancel-button"
                role="button"
              >
                <span
                  class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  Got it
                </span>
              </button>
            </div>
            <div
              class="mm-box mm-container mm-container--max-width-sm mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--align-items-center"
            />
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`BridgeAlertModal quote-card should render warning banner when there is a price impact warning (with exchange rates): 0.07: BannerAlert within BridgeAlertModal 1`] = `undefined`;

exports[`BridgeAlertModal submit-cta should disable the submit button when submission is in progress 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal bridge-alert-modal"
    data-testid="bridge-alert-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <div
                class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--align-items-center mm-box--width-full"
              >
                <svg
                  class="inline-block w-8 h-8 text-error-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
                  />
                </svg>
                <h4
                  class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default"
                >
                  Very high price impact
                </h4>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-pill"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box mm-container mm-container--max-width-undefined mm-box--padding-bottom-4 mm-box--padding-inline-4 mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
          >
            <p
              class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
            >
              You'll lose approximately 90% of your token's market price on this swap. Try a smaller trade or a more liquid route to improve your rate.
            </p>
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            />
            <div
              class="flex flex-row gap-4 items-center pt-3 pr-4 pb-3 pl-4 bg-error-muted rounded-xl"
              data-testid="bridge-alert-modal-banner"
            >
              <svg
                class="inline-block w-6 h-6 text-error-default"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
                />
              </svg>
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class=""
                >
                  <p
                    class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
                  >
                    You will lose $61,664.88 on this trade
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-modal-footer mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
          >
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
            >
              <button
                aria-busy="true"
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full text-default bg-muted-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default cursor-not-allowed"
                data-testid="bridge-alert-modal-proceed-button"
                disabled=""
                role="button"
              >
                <span
                  aria-hidden="true"
                  class="absolute inline-flex items-center gap-x-1"
                >
                  <svg
                    class="inline-block w-5 h-5 animate-spin text-inherit"
                    fill="currentColor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.75 3v3a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 1.5 0m3.492 5.508a.75.75 0 0 0 .53-.22l2.122-2.121a.75.75 0 0 0-1.06-1.061l-2.122 2.121a.75.75 0 0 0 .53 1.28M21 11.25h-3a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5m-4.227 4.463a.75.75 0 0 0-1.06 1.06l2.12 2.121a.75.75 0 0 0 1.061-1.06ZM12 17.25a.75.75 0 0 0-.75.75v3a.75.75 0 0 0 1.5 0v-3a.75.75 0 0 0-.75-.75m-4.773-1.538-2.121 2.121a.75.75 0 0 0 1.06 1.061l2.122-2.121a.75.75 0 0 0-1.06-1.06M6.75 12a.75.75 0 0 0-.75-.75H3a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 .75-.75m-.583-6.894a.75.75 0 0 0-1.061 1.06l2.121 2.122a.75.75 0 0 0 1.06-1.06Z"
                    />
                  </svg>
                  <span
                    class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                  />
                </span>
                <span
                  aria-hidden="true"
                  class="invisible inline-flex items-center"
                >
                  <span
                    class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                  >
                    Proceed
                  </span>
                </span>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="sr-only"
                >
                  Loading
                </span>
              </button>
              <button
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default"
                data-testid="bridge-alert-modal-cancel-button"
                disabled=""
                role="button"
              >
                <span
                  class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  Cancel
                </span>
              </button>
            </div>
            <div
              class="mm-box mm-container mm-container--max-width-sm mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--align-items-center"
            />
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`BridgeAlertModal submit-cta should not render when there is no price impact error: 0 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal submit-cta should not render when there is no price impact error: 0.001 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal submit-cta should not render when there is no price impact error: 0.07 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal submit-cta should not render when there is no price impact error: 0.24 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal submit-cta should not render when there is no price impact error: undefined 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
</body>
`;

exports[`BridgeAlertModal submit-cta should render when there is a price impact error 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal bridge-alert-modal"
    data-testid="bridge-alert-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-elevated1 mm-box--rounded-lg mm-box--border-color-border-alternative mm-box--border-width-1 box--border-style-solid"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <div
                class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--align-items-center mm-box--width-full"
              >
                <svg
                  class="inline-block w-8 h-8 text-error-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
                  />
                </svg>
                <h4
                  class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default"
                >
                  Very high price impact
                </h4>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-pill"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box mm-container mm-container--max-width-undefined mm-box--padding-bottom-4 mm-box--padding-inline-4 mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
          >
            <p
              class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
            >
              You'll lose approximately 90% of your token's market price on this swap. Try a smaller trade or a more liquid route to improve your rate.
            </p>
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            />
            <div
              class="flex flex-row gap-4 items-center pt-3 pr-4 pb-3 pl-4 bg-error-muted rounded-xl"
              data-testid="bridge-alert-modal-banner"
            >
              <svg
                class="inline-block w-6 h-6 text-error-default"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
                />
              </svg>
              <div
                class="min-w-0 flex-1"
              >
                <div
                  class=""
                >
                  <p
                    class="text-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
                  >
                    You will lose $61,664.88 on this trade
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-modal-footer mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
          >
            <div
              class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
            >
              <button
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-muted text-default hover:bg-muted-hover active:bg-muted-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default"
                data-testid="bridge-alert-modal-proceed-button"
                role="button"
              >
                <span
                  class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  Proceed
                </span>
              </button>
              <button
                class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 w-full transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default"
                data-testid="bridge-alert-modal-cancel-button"
                role="button"
              >
                <span
                  class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  Cancel
                </span>
              </button>
            </div>
            <div
              class="mm-box mm-container mm-container--max-width-sm mm-box--margin-right-auto mm-box--margin-left-auto mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--align-items-center"
            />
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
